--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,60 +1,61 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
+    <base href="./webjars/swagger-ui/">
     <link href="./swagger-ui.css" rel="stylesheet" type="text/css" >
     <link href="./favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
     <link href="./favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
     <style>
-      html
-      {
-        box-sizing: border-box;
-        overflow: -moz-scrollbars-vertical;
-        overflow-y: scroll;
-      }
+        html
+        {
+            box-sizing: border-box;
+            overflow: -moz-scrollbars-vertical;
+            overflow-y: scroll;
+        }
 
-      *,
-      *:before,
-      *:after
-      {
-        box-sizing: inherit;
-      }
+        *,
+        *:before,
+        *:after
+        {
+            box-sizing: inherit;
+        }
 
-      body
-      {
-        margin:0;
-        background: #fafafa;
-      }
+        body
+        {
+            margin:0;
+            background: #fafafa;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <div id="swagger-ui"></div>
+<body>
+<div id="swagger-ui"></div>
 
-    <script src="./swagger-ui-bundle.js"> </script>
-    <script src="./swagger-ui-standalone-preset.js"> </script>
-    <script>
+<script src="./swagger-ui-bundle.js"> </script>
+<script src="./swagger-ui-standalone-preset.js"> </script>
+<script>
     window.onload = function() {
-      // Begin Swagger UI call region
-      const ui = SwaggerUIBundle({
-        url: "/openapi.json",
-        dom_id: '#swagger-ui',
-        deepLinking: true,
-        presets: [
-          SwaggerUIBundle.presets.apis,
-          SwaggerUIStandalonePreset
-        ],
-        plugins: [
-          SwaggerUIBundle.plugins.DownloadUrl
-        ],
-        layout: "StandaloneLayout"
-      })
-      // End Swagger UI call region
+        // Begin Swagger UI call region
+        const ui = SwaggerUIBundle({
+            url: "/openapi.json",
+            dom_id: '#swagger-ui',
+            deepLinking: true,
+            presets: [
+                SwaggerUIBundle.presets.apis,
+                SwaggerUIStandalonePreset
+            ],
+            plugins: [
+                SwaggerUIBundle.plugins.DownloadUrl
+            ],
+            layout: "StandaloneLayout"
+        })
+        // End Swagger UI call region
 
-      window.ui = ui
+        window.ui = ui
     }
-  </script>
-  </body>
+</script>
+</body>
 </html>
